--- a/src/components/MemberCard/style.css
+++ b/src/components/MemberCard/style.css
@@ -7,7 +7,7 @@
 
 .biseau {
   height: 40px;
-  background: orange;
+  background: #2196f3;
   display: inline-block;
   padding: 0;
   margin-bottom: .3em;
@@ -20,7 +20,7 @@
   width:0;
   height:0;
   border-style:solid;
-  border-color:transparent transparent orange transparent;
+  border-color:transparent transparent #2196f3 transparent;
   border-width:0px 0px 40px 20px;
 }
 .biseau::after {
@@ -30,6 +30,6 @@
   width:0;
   height:0;
   border-style:solid;
-  border-color:orange transparent transparent  transparent;
+  border-color:#2196f3 transparent transparent  transparent;
   border-width:40px 20px 0px 0px;
 }
